Deactivated mojo animal sniffer