@@ -125,7 +125,7 @@
         <artifactId>tycho-surefire-plugin</artifactId>
         <version>${tycho-version}</version>
         <configuration>
-          <argLine>-Xmx512m -XX:MaxPermSize=128M</argLine>
+          <argLine>-Xmx512m</argLine>
           <useUIHarness>true</useUIHarness>
           <appArgLine>-nl en -consolelog</appArgLine>
           <dependencies>
@@ -174,6 +174,8 @@
         </configuration>
       </plugin>
 
+      <!--
+        reactive once Java 8 is supported 
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
@@ -195,6 +197,7 @@
           </execution>
         </executions>
       </plugin>
+       -->
       
     </plugins>
   </build>
